# story_audio

./: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
story_audio/: Dockerfile  asgi.py  settings.py  urls.py  wsgi.py
