[tool.poetry]
name = "story-audio"
version = "0.1.0"
description = ""
authors = ["hainh3 <hainh3@smartosc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
